# cloudbase-init-ci

./: .gitattributes  .gitignore  .pylintrc  .testr.conf  .travis.yml  HOWTO  HOWTO.md  PostInstall.ps1  README.md  README.rst  pylintrc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
argus/: config.py  environment.py  exceptions.py  log.py  prepare.py  remote_client.py  runner.py  scenario.py  shell.py  util.py  version.py
argus-ci/: __init__.py  config.py  exceptions.py  prepare.py  remote_client.py  util.py
argus-ci/tests/: test_cbinit.py
argus/action_manager/: base.py  windows.py
argus/argus/: config.py  prepare.py  scenario.py  util.py
argus/backends/: base.py  factory.py  tempest.py  tempest_backend.py  windows.py
argus/client/: base.py  windows.py
argus/config/: __init__.py  arestor.py  ci.py  cloudbaseinit.py  factory.py  local.py  mock_cloudstack.py  mock_ec2.py  mock_maas.py  mock_openstack.py  openstack.py  opts.py
argus/config_generator/: base.py
argus/introspection/: base.py
argus/metadata_provider/: __init__.py  arestor_provider.py  base.py
argus/recipees/: base.py
argus/recipes/: base.py
argus/resources/: cert.pem  certificate  cloudbase-init-unattend.conf-template  cloudbase-init.conf-template  dnsmasq.sample  get_traceback.ps1  installCBinit.ps1  install_git.ps1  key.pem  multipart_certificate  multipart_metadata  public_keys  stop_devstack.py
argus/scenarios/: base.py  cloud.py  service_mock.py  windows.py
argus/tests/: base.py  generic_tests.py  scenarios.py  test_cbinit.py  test_sample.py
argus/unit_tests/: test_utils.py
ci/: tests.py
docs/: Makefile  api.rst  conf.py  images.rst  index.rst  make.bat  walkthrough.rst
docs/api/: argus.backends.base.rst  argus.backends.heat.client.rst  argus.backends.heat.heat_backend.rst  argus.backends.tempest.cloud.rst  argus.backends.tempest.manager.rst  argus.backends.tempest.tempest_backend.rst  argus.backends.windows.rst  argus.client.base.rst  argus.client.windows.rst  argus.introspection.base.rst  argus.introspection.cloud.base.rst  argus.introspection.cloud.windows.rst  argus.recipes.base.rst  argus.recipes.cloud.base.rst  argus.recipes.cloud.windows.rst  argus.remote_client.rst  argus.scenarios.base.rst  argus.util.rst  (+5 more)
etc/: README.md  argus-config-generator.conf  argus.conf  argus.conf.sample  tests.py
extra/: installCBinit.ps1
scripts/: subunit2html.py
tests/: test_config.py  test_util.py
(+81 files in other folders)
