[metadata]
name = argus
version = 0.5.0
summary = CI framework for cloudbase-init
author = Cloudbase Solutions Srl
author-email = cpopa@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software
  License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3

[files]
packages =
  argus

[global]
setup-hooks =
    pbr.hooks.setup_hook
