[metadata]
name = argus
version = 0.5.1
summary = CI framework for cloudbase-init
description-file =
  README.rst
author = Cloudbase Solutions Srl
author-email = cpopa@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3

[files]
packages =
  argus

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    argus.conf = argus.config.opts:get_options
console_scripts =
    argus = argus.shell:main
